# Barycentric-Geometry-Calculator

./: .gitlab-ci.yml  Button.cpp  Button.h  ButtonManager.cpp  ButtonManager.h  CMakeLists.txt  Dockerfile  Factory.cpp  Factory.h  ModeManager.h  README.md  Scene.cpp  Scene.h  copy.py  creationTags.h  main.cpp  run.sh  shape.cpp  shape.h  toolsMode.cpp  toolsMode.h
.github/workflows/: cmake-multi-platform.yml
cmake/: CodeCoverage.cmake
include/: BarycentricCoordinates.h  Button.h  ButtonManager.h  Factory.h  ModeManager.h  NameBox.h  Scene.h  shape.h  toolsMode.h
source/: BarycentricCoordinate.cpp  Button.cpp  ButtonManager.cpp  CMakeLists.txt  NameBox.cpp  Scene.cpp  main.cpp  shape.cpp  toolsMode.cpp
sourse/: BarycentricCoordinate.cpp  Button.cpp  ButtonManager.cpp  NameBox.cpp  Scene.cpp  main.cpp  shape.cpp  toolsMode.cpp
tests/: CMakeLists.txt  WonderfulTrianglePoints.cpp  test.cpp
